modules/tree-sitter-smarts/test/corpus/reactions.txt
================================================================================
Empty agent side
================================================================================
C>>C
--------------------------------------------------------------------------------

(source_file
  (record
    (structure
      (chain
        (branched_atom
          (organic_symbol)))
      (chain
        (branched_atom
          (organic_symbol))))))

================================================================================
Three sides
================================================================================
C>C>C
--------------------------------------------------------------------------------

(source_file
  (record
    (structure
      (chain
        (branched_atom
          (organic_symbol)))
      (chain
        (branched_atom
          (organic_symbol)))
      (chain
        (branched_atom
          (organic_symbol))))))

================================================================================
Mapped reaction
================================================================================
[C:1][O:2]>>[C:1][O:2]
--------------------------------------------------------------------------------

(source_file
  (record
    (structure
      (chain
        (branched_atom
          (bracket_atom
            (and_high
              (element_symbol)
              (atom_class
                (class_number)))))
        (chain
          (branched_atom
            (bracket_atom
              (and_high
                (element_symbol)
                (atom_class
                  (class_number)))))))
      (chain
        (branched_atom
          (bracket_atom
            (and_high
              (element_symbol)
              (atom_class
                (class_number)))))
        (chain
          (branched_atom
            (bracket_atom
              (and_high
                (element_symbol)
                (atom_class
                  (class_number))))))))))

================================================================================
Empty reactant side
================================================================================
>>C
--------------------------------------------------------------------------------

(source_file
  (record
    (structure
      (chain
        (branched_atom
          (organic_symbol))))))

================================================================================
Recursive SMARTS holds a chain, not a reaction
:error
================================================================================
[$(C>>C)]
--------------------------------------------------------------------------------

(source_file)

================================================================================
One arrow is not a reaction
:error
================================================================================
C>C
--------------------------------------------------------------------------------

================================================================================
Three arrows are a multi-step reaction, which is not supported
:error
================================================================================
C>C>C>C
--------------------------------------------------------------------------------
